kubernetes/eureka-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-server
  labels:
    app: eureka-server

spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka-server
  template:
    metadata:
      labels:
        app: eureka-server
    spec:
      containers:
      - name: eureka-server
        image: localhost:33000/eureka-server:0.0.1
        imagePullPolicy: Always
        ports:
          - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: eureka-server-svc
  labels:
    app: eureka-server
spec:
  type: NodePort
  selector:
    app: eureka-server
  ports:
    - nodePort: 30000
      port: 80
      targetPort: 8000
